[package]
name = "one-euro"
version = "0.2.0"
edition = "2021"
authors = ["Rostyslav Bohomaz <rostyslav.db@gmail.com>"]
license = "MIT"
description = "Multidimensional implementation of 1€ Filter"
repository = "https://github.com/rostyq/one-euro-rs"
exclude = [
    "/assets",
    "/tests",
    ".*"
]

[dependencies]
nalgebra = { version = "0.32.1", default-features = false }

[dev-dependencies]
approx = { version = "0.5.1", default-features = false }
csv = { version = "1.1.6", default-features = false }
nalgebra = { version = "0.32.1", default-features = false, features = ["std"] }
serde = { version = "1.0.152", features = ["derive"] }
