[package]
name = "one-euro"
version = "0.4.0"
edition = "2021"
authors = ["Rostyslav Bohomaz <rostyslav.db@gmail.com>"]
license = "MIT"
description = "Multidimensional implementation of 1€ Filter"
repository = "https://github.com/rostyq/one-euro-rs"
exclude = [
    "/assets",
    "/tests",
    "/benches",
    ".*"
]

[lib]
name = "one_euro"
bench = false

[dependencies]
nalgebra = { version = "0.32.1", default-features = false }

[dev-dependencies]
approx = { version = "0.5.1", default-features = false }
csv = { version = "1.1.6", default-features = false }
nalgebra = { version = "0.32.1", default-features = false, features = ["std"] }
serde = { version = "1.0.152", features = ["derive"] }
criterion = "0.4.0"

[[bench]]
name = "filter_bench"
harness = false
